--- a/src/main/resources/templates/fragments/headerfooter.html
+++ b/src/main/resources/templates/fragments/headerfooter.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Header</title>
-</head>
-<body>
-<header th:fragment="header">
-    <nav>
-        <ul>
-            <li>
-                <a class="nav" th:href="@{/home}">Homepage</a>
-            </li>
-            <li>
-                <a class="nav" th:href="@{/about}">About</a>
-            </li>
-            <li>
-                <a class="nav" th:href="@{/venuelist}">Venue List</a>
-            </li>
-
-        </ul>
-    </nav>
-</header>
-
-<footer th:fragment="footer">
-    Library management system made by noah
-</footer>
-</body>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+    <head>
+        <meta charset="UTF-8">
+        <title>HeaderFooter</title>
+    </head>
+    <body>
+        <header th:fragment="header" class="container-fluid header">
+            <nav class="navbar navbar-expand-lg">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
+                        aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a th:href="@{/}">
+                    <img id="logo" th:src="@{/files/Logo.png}" alt="Logo" class="navbar-brand">
+                </a>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarToggle">
+                    <ul class="navbar-nav mt-2 mt-lg-0">
+                        <li class="nav-item ">
+                            <a sec:authorize="isAnonymous()" class="nav-link" th:href="@{/}">Home</a>
+                            <a sec:authorize="hasRole('ROLE_USER')" class="nav-link" th:href="@{/user}">Home</a>
+                            <a sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link" th:href="@{/admin}">Home</a>
+                        </li>
+                        <li sec:authorize="hasRole('ROLE_USER')" class="nav-item">
+                            <a class="nav-link " th:href="@{/user/catalog}">Catalog</a>
+                        </li>
+                        <li sec:authorize="isAnonymous()" class="nav-item">
+                            <a class="nav-link" th:href="@{/registration}">Register</a>
+                        </li>
+                        <li sec:authorize="isAnonymous()" class="nav-item">
+                            <a class="nav-link" th:href="@{/login}">Login</a>
+                        </li>
+                        <li sec:authorize="hasRole('ROLE_USER')" class="nav-item">
+                            <a class="nav-link" th:href="@{/user/cart}">Cart</a>
+                        </li>
+                        <li sec:authorize="isAuthenticated()" class="nav-item">
+                            <a class="nav-link" th:href="@{/logout}">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <footer th:fragment="footer"></footer>
+    </body>
 </html>
